working save function with jar